--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,6 +28,13 @@ html {
     display: none;
 }
 
+.player.playing .icon-pause {
+    display: inline-block;
+}
+  
+.player.playing .icon-play {
+    display: none;
+}
 
 .dashboard {
     padding: 16px 16px 14px;
